# recap

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  alembic.ini  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  versioneer.py
alembic/: env.py
docs/: index.md  querying_data.md  quickstart.md  resource_examples.md
docs/api/: client.md
docs/source/: conf.py  index.rst  installation.rst  usage.rst
recap/: _version.py  exceptions.py
recap/adapter/: __init__.py  local.py  process_run_construct.py  query_loaders.py  resource_construct.py
recap/client/: base_client.py
recap/db/: __init__.py  attribute.py  campaign.py  process.py  resource.py  step.py
recap/dsl/: __init__.py  attribute_builder.py  process_builder.py  query.py  resource_builder.py
recap/models/: __init__.py  actions.py  attribute.py  base.py  campaign.py  container.py  experiment.py  process.py  resource.py  step.py
recap/schemas/: __init__.py  attribute.py  common.py  container.py  experiment.py  process.py  resource.py  step.py
recap/tests/: conftest.py  test_actions.py  test_array_default_value.py  test_attribute_value.py  test_builders_idempotent.py  test_builders_models.py  test_campaign_update.py  test_client.py  test_container.py  test_db_models.py  test_experiment.py  test_fragment_screening.py  test_fragment_screening_api.py  test_get_resource_perf.py  test_platemate_client.py  test_platemate_parity.py  test_process_assignment.py  test_process_run_resource_tree_perf.py  test_process_run_update.py  (+5 more)
(+24 files in other folders)
